The implementation for bug 68108 does not include the drag support.
Why is this making bots red? Can we just add some tests back to the Skipped list?
We currently have many drag and drop tests enabled and even "passing", but mostly by accident. I have a patch that implements WebKit1-like event saving and replaying. This doesn't quite work, because WebDragClient messages from WebProcess are asynchronous, and are delivered out of order in WKTR, which is mostly synchronous when it comes to event handling. The ideal way to fix this would involve refactoring WebKit2 to use NSDragSession API, which is not modal, and thus doesn't need mouse event saving for tests. There are exciting opportunities for cleanup in WebKit here, as the new API doesn't use NSPasteboard for drag initiation, so we could somewhat decouple drag&drop from clipboard (the only caveat being that DOM APIs expose them as one class, so WebCore layer has to respect that).
Created attachment 210135 [details] proposed fix
Comment on attachment 210135 [details] proposed fix Sorry, wrong bug.