TestRunnerWKWebView should simulate OS drag&drop events https://bugs.webkit.org/show_bug.cgi?id=68552 rdar://158888281

Reviewed by Wenson Hsieh and Ryosuke Niwa.

Expand [TestRunnerWKWebView dragImage:...] to initialize a
WebKitTestRunnerDraggingInfo with an incrementing sequence number; and
handle later mouse-down/dragged/up to generate corresponding drag&drop
messages that the OS would normally send following real mouse events.

This makes a number of drag&drop tests now work on WK2.

* LayoutTests/platform/mac-wk2/TestExpectations:
* LayoutTests/platform/mac-wk2/editing/pasteboard/dataTransfer-setData-getData-expected.txt: Removed.
* Tools/WebKitTestRunner/cocoa/TestRunnerWKWebView.mm:
(-[TestRunnerWKWebView dragImage:at:offset:event:pasteboard:source:slideBack:]):
(-[TestRunnerWKWebView mouseDown:]):
(-[TestRunnerWKWebView mouseUp:]):
(-[TestRunnerWKWebView mouseDragged:]):
* Tools/WebKitTestRunner/mac/WebKitTestRunnerDraggingInfo.h:
* Tools/WebKitTestRunner/mac/WebKitTestRunnerDraggingInfo.mm:
(-[WebKitTestRunnerDraggingInfo draggingSequenceNumber]):

Canonical link: https://commits.webkit.org/304228@main