Tools/WebKitTestRunner/cocoa/TestRunnerWKWebView.mm
@@ -28,7 +28,6 @@
 
 #import "PlatformViewHelpers.h"
 #import "TestController.h"
-#import "WebKitTestRunnerDraggingInfo.h"
 #import <WebKit/WKUIDelegatePrivate.h>
 #import <WebKit/WKWebViewPrivateForTesting.h>
 #import <WebKit/_WKFormInputSession.h>
@@ -41,6 +40,10 @@
 
 #if ENABLE(MODEL_ELEMENT_IMMERSIVE)
 #import <WebKit/_WKImmersiveEnvironmentDelegate.h>
+#endif
+
+#if PLATFORM(MAC)
+#import "WebKitTestRunnerDraggingInfo.h"
 #endif
 
 #if PLATFORM(IOS_FAMILY)
@@ -81,6 +84,10 @@ struct CustomMenuActionInfo {
     BOOL _isInteractingWithFormControl;
     BOOL _scrollingUpdatesDisabled;
     RetainPtr<NSArray<NSString *>> _allowedMenuActions;
+#if PLATFORM(MAC)
+    int _draggingSequenceNumber;
+    RetainPtr<WebKitTestRunnerDraggingInfo> _currentDraggingInfo;
+#endif
 #if PLATFORM(IOS_FAMILY)
     RetainPtr<UITapGestureRecognizer> _windowTapGestureRecognizer;
     BlockPtr<void()> _windowTapRecognizedCallback;
@@ -110,8 +117,38 @@ IGNORE_WARNINGS_BEGIN("deprecated-implementations")
 - (void)dragImage:(NSImage *)anImage at:(NSPoint)viewLocation offset:(NSSize)initialOffset event:(NSEvent *)event pasteboard:(NSPasteboard *)pboard source:(id)sourceObj slideBack:(BOOL)slideFlag
 IGNORE_WARNINGS_END
 {
-    auto draggingInfo = adoptNS([[WebKitTestRunnerDraggingInfo alloc] initWithImage:anImage offset:initialOffset pasteboard:pboard source:sourceObj]);
+    ++_draggingSequenceNumber;
+    RetainPtr draggingInfo = adoptNS([[WebKitTestRunnerDraggingInfo alloc] initWithImage:anImage offset:initialOffset pasteboard:pboard source:sourceObj sequenceNumber:_draggingSequenceNumber]);
+    _currentDraggingInfo = draggingInfo;
+    [self draggingEntered:draggingInfo.get()];
     [self draggingUpdated:draggingInfo.get()];
+}
+
+- (void)mouseDown:(NSEvent *)event
+{
+    if (_currentDraggingInfo) {
+        NSLog(@"[WKWebViewMac mouseDown:] with unexpected _currentDraggingInfo, missing mouseUp?");
+        _currentDraggingInfo = nil;
+    }
+    [super mouseDown:event];
+}
+
+- (void)mouseUp:(NSEvent *)event
+{
+    if (RetainPtr<WebKitTestRunnerDraggingInfo> draggingInfo = _currentDraggingInfo) {
+        [self prepareForDragOperation:draggingInfo.get()];
+        [self performDragOperation:draggingInfo.get()];
+        _currentDraggingInfo = nil;
+    } else
+        [super mouseUp:event];
+}
+
+- (void)mouseDragged:(NSEvent *)event
+{
+    if (RetainPtr<WebKitTestRunnerDraggingInfo> draggingInfo = _currentDraggingInfo)
+        [self draggingUpdated:draggingInfo.get()];
+    else
+        [super mouseDragged:event];
 }
 #endif
 
